Inserimento tassa soggiorno nei documenti.

--- a/App.config
+++ b/App.config
@@ -291,6 +291,7 @@
     <add key="AliquotaIvaHotel" value="" />
     <add key="ServizioHotel" value="" />
     <add key="TassaSoggiornoHotel" value="" />
+    <add key="DescrizioneTassaSoggHotel" value="IMPOSTA DI SOGGIORNO - (F.C. IVA)" />
     <add key="ApplicaTassaNeonati" value="" />
     <add key="ApplicaTassaBambini" value="" />
     <add key="ApplicaTassaRagazzi" value="" />
