--- a/App.config
+++ b/App.config
@@ -3,8 +3,13 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString1" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True" providerName="System.Data.OleDb" />
+    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString1"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
     <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
+    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\bin\Archivi\Hospitality.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <appSettings>
     <add key="NomeProdotto" value="" />
