--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -178,6 +178,9 @@
       <HintPath>..\Risorse\Classi\MSolution\bin\Interop.SHDocVw.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="itextsharp">
+      <HintPath>C:\Users\Luigi Montana\Downloads\itextsharp-develop\itextsharp-develop\src\core\bin\Debug_woDrawing\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91">
       <Private>True</Private>
     </Reference>
@@ -434,6 +437,7 @@
     <Compile Include="Codice\Form\Ristorante\AddebitaContoPos.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Codice\Moduli\GeneraPdf.vb" />
     <Compile Include="GlobalSuppressions.vb" />
     <Compile Include="HospitalityDataSet.vb" />
     <Compile Include="Codice\Form\Ristorante\NoteContiPos.vb">
