--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -401,6 +401,12 @@
     <Compile Include="Codice\Form\Hospitality\Documento.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Codice\Form\Hospitality\InvioEmail.Designer.vb">
+      <DependentUpon>InvioEmail.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Codice\Form\Hospitality\InvioEmail.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Codice\Form\Hospitality\SelezionaPrenotazione.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -876,6 +882,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hospitality\Documento.resx">
       <DependentUpon>Documento.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Codice\Form\Hospitality\InvioEmail.resx">
+      <DependentUpon>InvioEmail.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hospitality\SelezionaPrenotazione.resx">
       <DependentUpon>SelezionaPrenotazione.vb</DependentUpon>
