--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -281,6 +281,7 @@
     <Compile Include="Codice\Classi\ImpostazioniTavoliPOS.vb" />
     <Compile Include="Codice\Classi\MSolution.vb" />
     <Compile Include="Codice\Classi\AccessoriServizi.vb" />
+    <Compile Include="Codice\Classi\Email.vb" />
     <Compile Include="Codice\Classi\StoricoPresenzeCamere.vb" />
     <Compile Include="Codice\Classi\StatoPiattiSQLite.vb" />
     <Compile Include="Codice\Classi\StatoComandeSQLite.vb" />
@@ -399,6 +400,9 @@
       <DependentUpon>Documento.vb</DependentUpon>
     </Compile>
     <Compile Include="Codice\Form\Hospitality\Documento.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Codice\Form\Hospitality\ElencoEmail.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Codice\Form\Hospitality\InvioEmail.Designer.vb">
@@ -882,6 +886,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hospitality\Documento.resx">
       <DependentUpon>Documento.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Codice\Form\Hospitality\ElencoEmail.resx">
+      <DependentUpon>ElencoEmail.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hospitality\InvioEmail.resx">
       <DependentUpon>InvioEmail.vb</DependentUpon>
