Sviluppo form Elenco Email inviate.

--- a/App.config
+++ b/App.config
@@ -259,6 +259,11 @@
     <add key="LEtichette" value="" />
     <add key="EtichetteX" value="" />
     <add key="EtichetteY" value="" />
+    <add key="WSEmail" value="" />
+    <add key="AEmail" value="" />
+    <add key="LEmail" value="" />
+    <add key="EmailX" value="" />
+    <add key="EmailY" value="" />
     <add key="WSMessaggi" value="" />
     <add key="AMessaggi" value="" />
     <add key="LMessaggi" value="" />
