--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -106,7 +106,7 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>3936E89439E9A6E8472A56772CD13FE4945766EF</ManifestCertificateThumbprint>
