Sviluppati comandi per il form InvioEmail.

--- a/App.config
+++ b/App.config
@@ -243,7 +243,7 @@
     <add key="LPrenCamere" value="" />
     <add key="PrenCamereX" value="" />
     <add key="PrenCamereY" value="" />
-    <add key="FiltroPeriodo" value="" />
+    <add key="FiltroPeriodoCamere" value="" />
     <add key="WSListiniCamere" value="" />
     <add key="AListiniCamere" value="" />
     <add key="LListiniCamere" value="" />
@@ -264,6 +264,7 @@
     <add key="LEmail" value="" />
     <add key="EmailX" value="" />
     <add key="EmailY" value="" />
+    <add key="FiltroPeriodoEmail" value="" />
     <add key="WSMessaggi" value="" />
     <add key="AMessaggi" value="" />
     <add key="LMessaggi" value="" />
