Sviluppata Classe SchedinePS. Aggiunto Form da terminare.

--- a/App.config
+++ b/App.config
@@ -249,6 +249,12 @@
     <add key="LListiniCamere" value="" />
     <add key="ListiniCamereX" value="" />
     <add key="ListiniCamereY" value="" />
+    <add key="WSSchedine" value="" />
+    <add key="ASchedine" value="" />
+    <add key="LSchedine" value="" />
+    <add key="SchedineX" value="" />
+    <add key="SchedineY" value="" />
+    <add key="FiltroPeriodoSchedine" value="" />
     <add key="WSCap" value="" />
     <add key="ACap" value="" />
     <add key="LCap" value="" />
