--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -442,6 +442,9 @@
     <Compile Include="Codice\Form\Hotel\ElencoSchedinePS.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Codice\Form\Hotel\SchedinaPS.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Codice\Form\Hotel\StoricoPresenze.Designer.vb">
       <DependentUpon>StoricoPresenze.vb</DependentUpon>
     </Compile>
@@ -749,6 +752,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="OreSviluppo.vb" />
     <Compile Include="Settings.vb" />
     <None Include="bin\Archivi\CAP.mdb" />
     <None Include="bin\Archivi\Hospitality.mdb" />
@@ -995,6 +999,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hotel\FiltroPeriodo.resx">
       <DependentUpon>FiltroPeriodo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Codice\Form\Hotel\SchedinaPS.resx">
+      <DependentUpon>SchedinaPS.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hotel\Stagioni.resx">
       <DependentUpon>Stagioni.vb</DependentUpon>
