--- a/App.config
+++ b/App.config
@@ -312,6 +312,8 @@
     <add key="ApplicaTassaNeonati" value="" />
     <add key="ApplicaTassaBambini" value="" />
     <add key="ApplicaTassaRagazzi" value="" />
+    <add key="NumeroSchedina" value="1" />
+    <add key="NumeroModC59" value="1" />
     <add key="RepartoAliquotaIvaCentroSportivo" value="" />
     <add key="AliquotaIvaCentroSportivo" value="" />
     <add key="Reparto1" value="" />
