--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -213,6 +213,7 @@
       <Name>System.Management</Name>
     </Reference>
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms">
       <Name>System.Windows.Forms</Name>
     </Reference>
@@ -413,6 +414,12 @@
     <Compile Include="Codice\Form\Hospitality\InvioEmail.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Codice\Form\Hospitality\repAccessoriServizi.Designer.vb">
+      <DependentUpon>repAccessoriServizi.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Codice\Form\Hospitality\repAccessoriServizi.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Codice\Form\Hospitality\SelezionaPrenotazione.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -456,8 +463,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Codice\Moduli\GeneraPdf.vb" />
+    <Compile Include="HospitalityDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HospitalityDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="GlobalSuppressions.vb" />
-    <Compile Include="HospitalityDataSet.vb" />
     <Compile Include="Codice\Form\Ristorante\NoteContiPos.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -720,11 +731,6 @@
     <Compile Include="Codice\Moduli\Dichiarazioni.vb">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="HospitalityDataSet.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>HospitalityDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Codice\Moduli\Licenza.vb" />
     <Compile Include="Codice\Moduli\MMain.vb">
       <SubType>Code</SubType>
@@ -845,6 +851,8 @@
     <None Include="Resources\About.ico" />
     <None Include="Resources\Hospitality.ico" />
     <EmbeddedResource Include="bin\Reports\AccessoriServizi.rdlc" />
+    <EmbeddedResource Include="bin\Reports\Fattura A4.rdlc" />
+    <EmbeddedResource Include="bin\Reports\StoricoPresenze.rdlc" />
     <EmbeddedResource Include="Codice\Classi\CellaColorata.resx">
       <DependentUpon>CellaColorata.vb</DependentUpon>
     </EmbeddedResource>
@@ -901,6 +909,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hospitality\InvioEmail.resx">
       <DependentUpon>InvioEmail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Codice\Form\Hospitality\repAccessoriServizi.resx">
+      <DependentUpon>repAccessoriServizi.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hospitality\SelezionaPrenotazione.resx">
       <DependentUpon>SelezionaPrenotazione.vb</DependentUpon>
