--- a/App.config
+++ b/App.config
@@ -22,6 +22,9 @@
     <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString5"
       connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
       providerName="System.Data.OleDb" />
+    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString6"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <appSettings>
     <add key="NomeProdotto" value="" />
