Creato Report Elenco prenotazioni camere.

--- a/App.config
+++ b/App.config
@@ -28,6 +28,9 @@
     <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString7"
       connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
       providerName="System.Data.OleDb" />
+    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString8"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <appSettings>
     <add key="NomeProdotto" value="" />
