--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -481,6 +481,12 @@
     <Compile Include="Codice\ReportsViewer\RepEmail.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Codice\ReportsViewer\RepPrenCamere.Designer.vb">
+      <DependentUpon>RepPrenCamere.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Codice\ReportsViewer\RepPrenCamere.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="HospitalityDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -867,6 +873,7 @@
     <None Include="Resources\About1.ico" />
     <None Include="Resources\About.ico" />
     <None Include="Resources\Hospitality.ico" />
+    <EmbeddedResource Include="bin\Reports\PrenCamere.rdlc" />
     <EmbeddedResource Include="bin\Reports\Email.rdlc" />
     <EmbeddedResource Include="bin\Reports\Cap.rdlc" />
     <EmbeddedResource Include="bin\Reports\AccessoriServizi.rdlc" />
@@ -1227,6 +1234,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\ReportsViewer\RepEmail.resx">
       <DependentUpon>RepEmail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Codice\ReportsViewer\RepPrenCamere.resx">
+      <DependentUpon>RepPrenCamere.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
