--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -487,6 +487,12 @@
     <Compile Include="Codice\ReportsViewer\RepPrenCamere.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Codice\ReportsViewer\RepSchedinePS.Designer.vb">
+      <DependentUpon>RepSchedinePS.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Codice\ReportsViewer\RepSchedinePS.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="HospitalityDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -873,6 +879,7 @@
     <None Include="Resources\About1.ico" />
     <None Include="Resources\About.ico" />
     <None Include="Resources\Hospitality.ico" />
+    <EmbeddedResource Include="bin\Reports\SchedinePS.rdlc" />
     <EmbeddedResource Include="bin\Reports\PrenCamere.rdlc" />
     <EmbeddedResource Include="bin\Reports\Email.rdlc" />
     <EmbeddedResource Include="bin\Reports\Cap.rdlc" />
@@ -1237,6 +1244,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\ReportsViewer\RepPrenCamere.resx">
       <DependentUpon>RepPrenCamere.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Codice\ReportsViewer\RepSchedinePS.resx">
+      <DependentUpon>RepSchedinePS.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
