Creato Report ListiniCamere + StroricoPresenze + Tabella StoricoPresenzeTemp con codice per salvare i dati temporanei per l'anteprima di stampa.

--- a/App.config
+++ b/App.config
@@ -34,6 +34,12 @@
     <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString9"
       connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
       providerName="System.Data.OleDb" />
+    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString10"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
+    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString11"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <appSettings>
     <add key="NomeProdotto" value="" />
