--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -481,6 +481,12 @@
     <Compile Include="Codice\ReportsViewer\RepEmail.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Codice\ReportsViewer\RepListiniCamere.Designer.vb">
+      <DependentUpon>RepListiniCamere.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Codice\ReportsViewer\RepListiniCamere.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Codice\ReportsViewer\RepPrenCamere.Designer.vb">
       <DependentUpon>RepPrenCamere.vb</DependentUpon>
     </Compile>
@@ -491,6 +497,12 @@
       <DependentUpon>RepSchedinePS.vb</DependentUpon>
     </Compile>
     <Compile Include="Codice\ReportsViewer\RepSchedinePS.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Codice\ReportsViewer\RepStoricoPresenzeCamere.Designer.vb">
+      <DependentUpon>RepStoricoPresenzeCamere.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Codice\ReportsViewer\RepStoricoPresenzeCamere.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="HospitalityDataSet.Designer.vb">
@@ -879,6 +891,8 @@
     <None Include="Resources\About1.ico" />
     <None Include="Resources\About.ico" />
     <None Include="Resources\Hospitality.ico" />
+    <EmbeddedResource Include="bin\Reports\StoricoPresenzeCamere.rdlc" />
+    <EmbeddedResource Include="bin\Reports\ListiniCamere.rdlc" />
     <EmbeddedResource Include="bin\Reports\SchedinePS.rdlc" />
     <EmbeddedResource Include="bin\Reports\PrenCamere.rdlc" />
     <EmbeddedResource Include="bin\Reports\Email.rdlc" />
@@ -1242,11 +1256,17 @@
     <EmbeddedResource Include="Codice\ReportsViewer\RepEmail.resx">
       <DependentUpon>RepEmail.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Codice\ReportsViewer\RepListiniCamere.resx">
+      <DependentUpon>RepListiniCamere.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Codice\ReportsViewer\RepPrenCamere.resx">
       <DependentUpon>RepPrenCamere.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\ReportsViewer\RepSchedinePS.resx">
       <DependentUpon>RepSchedinePS.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Codice\ReportsViewer\RepStoricoPresenzeCamere.resx">
+      <DependentUpon>RepStoricoPresenzeCamere.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
