--- a/App.config
+++ b/App.config
@@ -40,6 +40,9 @@
     <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString11"
       connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
       providerName="System.Data.OleDb" />
+    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString12"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <appSettings>
     <add key="NomeProdotto" value="" />
