--- a/App.config
+++ b/App.config
@@ -41,8 +41,7 @@
       connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
       providerName="System.Data.OleDb" />
     <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString12"
-      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
-      providerName="System.Data.OleDb" />
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True" />
   </connectionStrings>
   <appSettings>
     <add key="NomeProdotto" value="" />
