Sviluppo procedura ElaboraModelloIstaC59.

--- a/App.config
+++ b/App.config
@@ -42,6 +42,9 @@
       providerName="System.Data.OleDb" />
     <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString12"
       connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True" />
+    <add name="Hospitality_Solution.My.MySettings.HospitalityConnectionString13"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Archivi\Hospitality.mdb;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <appSettings>
     <add key="NomeProdotto" value="" />
@@ -346,6 +349,7 @@
     <add key="ApplicaTassaRagazzi" value="" />
     <add key="NumeroSchedina" value="1" />
     <add key="NumeroModC59" value="1" />
+    <add key="NumeroClientiGiornoPrec" value="0" />
     <add key="RepartoAliquotaIvaCentroSportivo" value="" />
     <add key="AliquotaIvaCentroSportivo" value="" />
     <add key="Reparto1" value="" />
