--- a/Hospitality Solution.vbproj
+++ b/Hospitality Solution.vbproj
@@ -415,6 +415,12 @@
     <Compile Include="Codice\Form\Hospitality\InvioEmail.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Codice\Form\Hotel\DataModIstatC59.Designer.vb">
+      <DependentUpon>DataModIstatC59.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Codice\Form\Hotel\DataModIstatC59.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="IstatDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -994,6 +1000,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\Form\Hospitality\InvioEmail.resx">
       <DependentUpon>InvioEmail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Codice\Form\Hotel\DataModIstatC59.resx">
+      <DependentUpon>DataModIstatC59.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Codice\ReportsViewer\RepAccessoriServizi.resx">
       <DependentUpon>RepAccessoriServizi.vb</DependentUpon>
